# stereo_camera

./: CMakeLists.txt  README.md  package.xml  setup.py
launch/: world.launch
media/materials/scripts/: checkerboard.material
model/: epipolar.urdf.xacro
src/: main.py  node.py
world/: world.world
