<?xml version="1.0"?>
<package>
  <name>epipolar</name>
  <version>0.0.0</version>
  <description>epipolar.</description>
  <maintainer email="example@example.com">Example</maintainer>
  <author email="example@example.com">Example</author>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <test_depend>gtest</test_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
